<resources>
    <string name="app_name">MyAnimations</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Roll Dice Fragment</string>
    <string name="second_fragment_label">Snow Flake Fragment</string>
    <string name="main_fragment">Main Fragment</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="roll_the_dice">Roll the Dice</string>
    <string name="roll">Roll!</string>
    <string name="roll_dice_button_text">Roll Dice Animation</string>
    <string name="snow_animation_button_text">Snow-Fall animation</string>
    <string name="rotating_square">Rotate Square Animation</string>
</resources>