<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">


    <fragment android:id="@+id/MainFragment"
        android:name="com.apprajapati.myanimations.MainFragment"
        android:label="@string/main_fragment"
        tools:layout="@layout/fragment_main">

        <action android:id="@+id/action_mainFragment_to_RollDiceFragment"
            app:destination="@id/RollDiceFragment"/>

        <action android:id="@+id/action_mainFragment_to_SnowFragment"
            app:destination="@id/SnowFlakeFragment" />

        <action android:id="@+id/action_mainFragment_to_RotateSquareFragment"
            app:destination="@id/rotateSquareFragment"/>

    </fragment>



    <fragment
        android:id="@+id/RollDiceFragment"
        android:name="com.apprajapati.myanimations.RollDiceAnimation"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_roll_dice">


    </fragment>
    <fragment
        android:id="@+id/SnowFlakeFragment"
        android:name="com.apprajapati.myanimations.SnowFlakeAnimation"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_snow_flake_animation">


    </fragment>

    <fragment
        android:id="@+id/rotateSquareFragment"
        android:name="com.apprajapati.myanimations.RotatingSquare"
        android:label="@string/rotating_square"
        tools:layout="@layout/fragment_rotate_square"/>


</navigation>